[package]
name = "solana-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.3"
solana-client = "1.10.3"
solana-account-decoder = "1.10.3"
solana-program = "1.10.3"
serde_json = "1.0.59"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serum_dex = "0.5.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
